fixed toolbar overflow bugs

--- a/src/index.css
+++ b/src/index.css
@@ -589,20 +589,11 @@ video {
   filter: drop-shadow(0px 1px 2px rgba(60, 64, 67, 0.1));
 }
 
-#POPOUT {
-  mask: linear-gradient(black, black) no-repeat;
-  -webkit-mask: linear-gradient(black, black) no-repeat;
-  mask-size: 100%;
-  -webkit-mask-size: 100%;
-}
-
 #POPOUT-COVER:not(.active):not(:hover)
     + #POPOUT-WRAPPER
-    > #POPOUT:not(:hover):not(:has(*:focus-visible)) {
+    #POPOUT:not(:hover):not(:has(*:focus-visible)) {
   translate: 100%;
   pointer-events: none;
-  mask-size: 0% !important;
-  -webkit-mask-size: 0% !important;
 }
 
 #POPOUT-COVER.active,
@@ -1268,6 +1259,14 @@ video {
 
 .overflow-y-auto{
   overflow-y: auto;
+}
+
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
+.overflow-y-visible{
+  overflow-y: visible;
 }
 
 .text-ellipsis{
